src/sass/layout/_header.scss
.header {
  color: $c-white;
  padding: 1.6rem 2.4rem;
  border-bottom: rgba($c-white, 20%) 1px solid;
}

.hamburger-menu {
  background-color: $c-blue-dark;
  width: 100%;
  // height: calc(100% - 6.4rem);
  padding: 2.4rem 2.4rem;

  position: fixed;
  left: 0;
  z-index: 1;
  overflow-y: auto;

  transition: height 0.5s ease, opacity 0.8s ease;

  &__item {
    height: 6.5rem;
    cursor: pointer;

    &:not(:last-child) {
      border-bottom: 1px solid rgba(#979797, 10%);
    }

    a {
      color: $c-white;
      text-decoration: none;
      text-transform: uppercase;
      font-weight: 700;
      font-size: 1.5rem;
      height: 100%;
      display: flex;
      align-items: center;
      gap: 2.5rem;
    }
  }
}

// DOT STYLE
.dot {
  display: inline-block;
  width: 2rem;
  height: 2rem;
  border-radius: 50%;

  &--mercury {
    background-color: $c-mercury;
  }

  &--venus {
    background-color: $c-venus;
  }

  &--earth {
    background-color: $c-earth;
  }

  &--mars {
    background-color: $c-mars;
  }

  &--jupiter {
    background-color: $c-jupiter;
  }

  &--saturn {
    background-color: $c-saturn;
  }

  &--uranus {
    background-color: $c-uranus;
  }

  &--neptune {
    background-color: $c-neptune;
  }
}

.hamburger-button {
  cursor: pointer;

  &.disabled {
    pointer-events: none;
  }

  &.clicked {
    img {
      opacity: 25%;
    }
  }
}

.collapse {
  &:not(.show) {
    display: none;
  }
}

.collapsing {
  opacity: 0;
  height: 0;
  overflow: hidden;
}

